--- a/src/templates/attentioncheck_1.html
+++ b/src/templates/attentioncheck_1.html
@@ -94,6 +94,10 @@
                             about your thoughts on this topic.</p>
 
                         <form method="post" action="{{ url_for('main.attentioncheck_1') }}">
+                            <div style="display: none;">
+                                <label for="website">Leave this field empty</label>
+                                <input type="text" name="website" id="website" autocomplete="off">
+                            </div>
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                             <div class="mb-4">
                                 <textarea class="form-control" id="response" name="response" rows="4"
